--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,235 @@
-.App {
+* {
+	box-sizing: border-box;
+}
+
+body {
+	font-family: "Lato", sans-serif;
+}
+
+.container {
+	display: grid;
+	grid-template-columns: repeat(2, 0fr);
+	gap: 20px;
+	justify-content: center;
+	margin: 60px auto;
+	max-width: 1200px;
+	padding: 0 20px;
+}
+
+@media (max-width: 900px) {
+	.container {
+		max-width: 600px;
+		grid-template-columns: repeat(2, 1fr);
+		gap: 15px;
+	}
+
+	.card {
+		max-width: 100%;
+	}
+
+	.card img {
+		height: 150px;
+	}
+
+	.card-content {
+		padding: 12px;
+		height: 150px;
+	}
+
+	.card h6 {
+		font-size: 12px;
+	}
+
+	.card p {
+		font-size: 8px;
+	}
+
+	.card .learn-more {
+		font-size: 12px;
+	}
+
+	.author {
+		font-size: 0.8rem;
+	}
+	.flex-item-left p,
+	.flex-item-right {
+		font-size: 7px;
+	}
+}
+
+@media (max-width: 600px) {
+	.container {
+		grid-template-columns: 1fr; 
+	}
+
+	.card {
+		max-width: 100%; 
+	}
+
+	.card img {
+		height: 150px; 
+	}
+
+	.card-content {
+		padding: 16px; 
+		height: auto; 
+	}
+
+	.card h6 {
+		font-size: 12px; 
+	}
+
+	.card p {
+		font-size: 8px; 
+	}
+
+	.card .learn-more {
+		font-size: 14px; 
+	}
+
+	.author {
+		font-size: 0.9rem; 
+	}
+
+	.flex-item-left p,
+	.flex-item-right {
+		font-size: 8px; 
+	}
+}
+
+.card {
+	background: #fff;
+	border-radius: 4px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	transition: transform 0.2s;
+	cursor: pointer;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+	width: 350px;
+
+	position: relative;
+}
+
+.card:hover {
+	transform: translateY(-5px);
+}
+
+.card img {
+	width: 100%;
+	height: 150px;
+
+	transition: filter 0.3s;
+}
+
+.card-content {
+	padding-top: 16px;
+	padding-bottom: 16px;
+	padding-left: 25px;
+	padding-right: 25px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	height: 150px;
+}
+
+.coloured-dot {
+	display: flex;
+	gap: 3.5px;
+}
+
+.blue,
+.orange {
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	display: inline-block;
+}
+
+.blue {
+	background-color: rgb(32, 184, 254);
+}
+
+.orange {
+	background-color: rgb(248, 189, 62);
+}
+
+.card h6 {
+	font-size: 14px;
+	margin-top: 9px;
+	margin-bottom: 5px;
+}
+
+.card p {
+	text-align: left;
+	font-size: 8px;
+	padding-top: 7px;
+	color: rgb(163, 163, 163);
+}
+
+.card .learn-more {
+	display: none;
+	position: absolute;
+	top: 20%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 8px 16px;
+	font-weight: bold;
+	color: white;
+	border-radius: 4px;
+	cursor: pointer;
+	font-size: 14px;
+}
+
+.card:hover img {
+	filter: brightness(50%);
+}
+
+.card:hover .learn-more {
+	display: block;
+}
+
+.author {
+	margin-top: 6px;
+	padding-bottom: 6px;
+	font-size: 0.9rem;
+	color: #666;
+	width: 100%;
+}
+
+.flex-container-author {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: -1;
+}
+
+.flex-item-left {
+	display: flex;
+	align-items: center;
+	gap: 5px;
+}
+
+.flex-item-left p {
+	margin: 0;
+	font-size: 8px;
+}
+
+.flex-item-right {
+	font-size: 8px;
+	color: #999;
+	padding-top: 4px;
+}
+.dash {
+	color: #999;
+	margin-left: -2px;
+	margin-right: -2px;
+	padding-top: 6px;
+}
+.loading {
+  font-size: 24px;
+  color: #666;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 20px;
 }
